--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <h1>Pagina Inicial</h1>
     <ol>
         <li><a href="paginas/comandosbasicos.html">Comandos Basicos</a></li>
-        <li><a href="paginas/comandosbasicos.html">Comandos Basicos</a></li>
+        <li><a href="paginas/ancoras.html">Ancoras</a></li>
+        <li><a href="paginas/atividadegit.html">Atividadegit</a></li>
+        <li><a href="paginas/imagens.html">Imagens</a></li>
+        <li><a href="paginas/links.html">Links</a></li>
+        <li><a href="paginas/ancoras.html">Lista de Termos</a></li>
+        <li><a href="paginas/listas.html">Listas</a></li>
+        <li><a href="paginas/listasalinhadas.html">Lista Alinhada</a></li>
     </ol>
     
 </body>
