--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="paginas/listas.html">Listas</a></li>
         <li><a href="paginas/listasalinhadas.html">Lista Alinhada</a></li>
     </ol>
+        <li><a href="atividades/tabela.html">tabela</a</li>
     
 </body>
 </html>
