--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <li><a href="paginas/ancoras.html">Lista de Termos</a></li>
         <li><a href="paginas/listas.html">Listas</a></li>
         <li><a href="paginas/listasalinhadas.html">Lista Alinhada</a></li>
-    </ol>
         <li><a href="atividades/tabela.html">tabela</a</li>
+         <li><a href="atividades/borda.html"></a></li>
+    </ol>
+        
     
 </body>
 </html>
