--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="paginas/listasalinhadas.html">Lista Alinhada</a></li>
         <li><a href="atividades/tabela.html">tabela</a</li>
          <li><a href="atividades/borda.html"></a></li>
+         <li><a href="atividades/tabelas.html">Tabelas</a></li>
     </ol>
         
     
