--- a/Paginas/formularioEXP.html
+++ b/Paginas/formularioEXP.html
@@ -44,7 +44,7 @@
          accept="image/png, image/jpeg">
     <div>
     </div>
-        <label for="">Escolha uma opção</label>
+        <label for="">Selecione uma opção</label>
         <select name="opc" id="opc">
             <option value="tsi">TSI</option>
             <option value="tme">TME</option>
