--- a/POSITION/position_fixed.html
+++ b/POSITION/position_fixed.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <h1>Texto incrivel</h1>
-    <h3>Onde quer que você esteja você sempre estará lá.. O álcool é o maior inimigo do homem... e o homem que foge de seus inimigos é um covarde!. Diz-me com quem andas e te direi se vou contigo.. Jesus salva! Que passa para Moisés, que chuta e é gooooolllll.... Por que o Mar Vermelho é azul?.!</h3>
-         <div id="elementofixed">
-            <img src="../img/cj.jpg"  wgitidth="300" alt="300">
-         </div>
-         
+    <img src="../img/cj.jpg"  wgitidth="300" alt="300">
+    <p>Onde quer que você esteja você sempre estará lá..</p>
+    <p>O álcool é o maior inimigo do homem... e o homem que foge de seus inimigos é um covarde!</p>
+    <p> Diz-me com quem andas e te direi se vou contigo.. Jesus salva! Que passa para Moisés, que chuta e é gooll.</p>
+    <p> Por que o Mar Vermelho é a azul??</p>
+        
+
 </body>
 </html>
 
