--- a/Animação/Animação.html
+++ b/Animação/Animação.html
@@ -8,20 +8,21 @@
 </head>
 <body>
   
-    
+  
   <div id="coluna">
      <div class="logo"></div>
      <div class="Logo2"></div>
      <div class="Logo3"></div>
      <div class="Logo4"></div>
+      <div class="Logo13">
+         <div class="foguete">
+            <img src="../img/foguete css.png" alt="" width="90px" height="90px">
+          </div>
+      </div>
   </div>
   <div id="coluna2">
      <div class="Logo5"></div>
-     <div class="Logo6">
-        <div class="foguete">
-            <img src="../img/foguete css.png" alt="" width="90px" height="90px">
-         </div>
-     </div>
+     <div class="Logo6"></div> 
      <div class="Logo7"></div>
      <div class="Logo8"></div>
   </div>
@@ -32,7 +33,7 @@
      <div class="Logo11"></div>
      <div class="Logo12"></div>
   </div>
-   
+  
   
   
 
