--- a/Animação/Animação.html
+++ b/Animação/Animação.html
@@ -33,8 +33,10 @@
      <div class="Logo11"></div>
      <div class="Logo12"></div>
   </div>
-  
-  
+   
+  <div class="nave">
+     <img src="../img/nave-removebg-preview.png" alt="" width="120px" height="120px" >
+  </div>
   
 
 </body>
