--- a/Animação/Animação.html
+++ b/Animação/Animação.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Animação.css">
   <title>Instituto Federal Logo Animation</title>
+  <link rel="shortcut icon" href="../img/logo-ifsp.jpg" type="image/x-icon">
 </head>
 <body>
   
   
   <div id="coluna">
-     <div class="logo"></div>
+     <div class="logo">
+     <div class="lua"><img src="../img/download-removebg-preview.png" alt=""></div>
+     </div>
      <div class="Logo2"></div>
      <div class="Logo3"></div>
      <div class="Logo4"></div>
